added more work...

--- a/spray-recommendation.ipynb
+++ b/spray-recommendation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prediction Model Data"
+    "# Spray Recommendation"
    ]
   },
   {
@@ -56,7 +56,7 @@
     "        else:\n",
     "            ten_day_avg.append(row.mean(skipna=True))\n",
     "\n",
-    "    return pd.Series(ten_day_avg)"
+    "    return pd.Series(ten_day_avg)\n"
    ]
   },
   {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -252,62 +252,14 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>60002</td>\n",
-       "      <td>69.500000</td>\n",
+       "      <td>69.5</td>\n",
        "      <td>9.4</td>\n",
-       "      <td>22.400000</td>\n",
+       "      <td>22.4</td>\n",
        "      <td>24250.0</td>\n",
        "      <td>0.001887</td>\n",
-       "      <td>12.000000</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>19.299999</td>\n",
        "      <td>8.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>60004</td>\n",
-       "      <td>68.000000</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>22.600000</td>\n",
-       "      <td>49957.0</td>\n",
-       "      <td>0.003888</td>\n",
-       "      <td>17.100000</td>\n",
-       "      <td>18.000000</td>\n",
-       "      <td>4.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>60005</td>\n",
-       "      <td>68.199997</td>\n",
-       "      <td>10.6</td>\n",
-       "      <td>23.600000</td>\n",
-       "      <td>30931.0</td>\n",
-       "      <td>0.002407</td>\n",
-       "      <td>16.100000</td>\n",
-       "      <td>19.400002</td>\n",
-       "      <td>7.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>60007</td>\n",
-       "      <td>70.199997</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>22.100000</td>\n",
-       "      <td>33973.0</td>\n",
-       "      <td>0.002644</td>\n",
-       "      <td>14.900001</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>5.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>60008</td>\n",
-       "      <td>69.599998</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>26.200001</td>\n",
-       "      <td>22302.0</td>\n",
-       "      <td>0.001735</td>\n",
-       "      <td>12.700000</td>\n",
-       "      <td>19.500000</td>\n",
-       "      <td>8.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -315,34 +267,22 @@
       ],
       "text/plain": [
        "   zip_code  percent_employed  percent_no_health  percent_public_health  \\\n",
-       "0     60002         69.500000                9.4              22.400000   \n",
-       "1     60004         68.000000                8.7              22.600000   \n",
-       "2     60005         68.199997               10.6              23.600000   \n",
-       "3     60007         70.199997                8.7              22.100000   \n",
-       "4     60008         69.599998               19.5              26.200001   \n",
+       "0     60002              69.5                9.4                   22.4   \n",
        "\n",
        "   total_population  population_porportion  percent_age_over_65  \\\n",
-       "0           24250.0               0.001887            12.000000   \n",
-       "1           49957.0               0.003888            17.100000   \n",
-       "2           30931.0               0.002407            16.100000   \n",
-       "3           33973.0               0.002644            14.900001   \n",
-       "4           22302.0               0.001735            12.700000   \n",
+       "0           24250.0               0.001887                 12.0   \n",
        "\n",
        "   percent_age_under_14  percent_low_income  \n",
-       "0             19.299999                 8.7  \n",
-       "1             18.000000                 4.3  \n",
-       "2             19.400002                 7.2  \n",
-       "3             16.000000                 5.6  \n",
-       "4             19.500000                 8.9  "
+       "0             19.299999                 8.7  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "demographics.head()"
+    "demographics.head(1)"
    ]
   },
   {
@@ -458,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -494,50 +434,22 @@
        "      <td>16.3</td>\n",
        "      <td>0.3</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>60106</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>60605</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>0.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>60607</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>60608</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   zip_code  LandArea  WaterArea\n",
-       "0     60018      16.3        0.3\n",
-       "1     60106       9.0        0.1\n",
-       "2     60605       1.2        0.8\n",
-       "3     60607       2.3        0.0\n",
-       "4     60608       6.4        0.2"
+       "0     60018      16.3        0.3"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "geo.head()"
+    "geo.head(1)"
    ]
   },
   {
@@ -553,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -613,78 +525,6 @@
        "      <td>7.1</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2007-05-29</td>\n",
-       "      <td>41.95469</td>\n",
-       "      <td>-87.800991</td>\n",
-       "      <td>1</td>\n",
-       "      <td>60634</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>21.9</td>\n",
-       "      <td>29.9</td>\n",
-       "      <td>72718.0</td>\n",
-       "      <td>0.005659</td>\n",
-       "      <td>12.799999</td>\n",
-       "      <td>17.200001</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2007-06-05</td>\n",
-       "      <td>41.95469</td>\n",
-       "      <td>-87.800991</td>\n",
-       "      <td>3</td>\n",
-       "      <td>60634</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>21.9</td>\n",
-       "      <td>29.9</td>\n",
-       "      <td>72718.0</td>\n",
-       "      <td>0.005659</td>\n",
-       "      <td>12.799999</td>\n",
-       "      <td>17.200001</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2007-06-05</td>\n",
-       "      <td>41.95469</td>\n",
-       "      <td>-87.800991</td>\n",
-       "      <td>5</td>\n",
-       "      <td>60634</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>21.9</td>\n",
-       "      <td>29.9</td>\n",
-       "      <td>72718.0</td>\n",
-       "      <td>0.005659</td>\n",
-       "      <td>12.799999</td>\n",
-       "      <td>17.200001</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2007-06-05</td>\n",
-       "      <td>41.95469</td>\n",
-       "      <td>-87.800991</td>\n",
-       "      <td>1</td>\n",
-       "      <td>60634</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>21.9</td>\n",
-       "      <td>29.9</td>\n",
-       "      <td>72718.0</td>\n",
-       "      <td>0.005659</td>\n",
-       "      <td>12.799999</td>\n",
-       "      <td>17.200001</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -692,40 +532,24 @@
       "text/plain": [
        "         Date  Latitude  Longitude  NumMosquitos  zip_code  percent_employed  \\\n",
        "0  2007-05-29  41.95469 -87.800991             1     60634              68.0   \n",
-       "1  2007-05-29  41.95469 -87.800991             1     60634              68.0   \n",
-       "2  2007-06-05  41.95469 -87.800991             3     60634              68.0   \n",
-       "3  2007-06-05  41.95469 -87.800991             5     60634              68.0   \n",
-       "4  2007-06-05  41.95469 -87.800991             1     60634              68.0   \n",
        "\n",
        "   percent_no_health  percent_public_health  total_population  \\\n",
        "0               21.9                   29.9           72718.0   \n",
-       "1               21.9                   29.9           72718.0   \n",
-       "2               21.9                   29.9           72718.0   \n",
-       "3               21.9                   29.9           72718.0   \n",
-       "4               21.9                   29.9           72718.0   \n",
        "\n",
        "   population_porportion  percent_age_over_65  percent_age_under_14  \\\n",
        "0               0.005659            12.799999             17.200001   \n",
-       "1               0.005659            12.799999             17.200001   \n",
-       "2               0.005659            12.799999             17.200001   \n",
-       "3               0.005659            12.799999             17.200001   \n",
-       "4               0.005659            12.799999             17.200001   \n",
        "\n",
        "   percent_low_income  land_area  water_area  \n",
-       "0                10.5        7.1         0.0  \n",
-       "1                10.5        7.1         0.0  \n",
-       "2                10.5        7.1         0.0  \n",
-       "3                10.5        7.1         0.0  \n",
-       "4                10.5        7.1         0.0  "
+       "0                10.5        7.1         0.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfsss.head()"
+    "dfsss.head(1)"
    ]
   },
   {
@@ -768,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -797,18 +621,22 @@
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>num_mosquitos</th>\n",
-       "      <th>percent_employed</th>\n",
-       "      <th>percent_no_health</th>\n",
-       "      <th>percent_public_health</th>\n",
        "      <th>total_population</th>\n",
        "      <th>population_porportion</th>\n",
-       "      <th>percent_age_over_65</th>\n",
-       "      <th>percent_age_under_14</th>\n",
-       "      <th>percent_low_income</th>\n",
        "      <th>land_area</th>\n",
        "      <th>water_area</th>\n",
        "      <th>year</th>\n",
        "      <th>week</th>\n",
+       "      <th>averaged_cases</th>\n",
+       "      <th>averaged_deaths</th>\n",
+       "      <th>at_risk_population_percent</th>\n",
+       "      <th>at_risk_population</th>\n",
+       "      <th>proportional_averaged_cases</th>\n",
+       "      <th>proportional_averaged_deaths</th>\n",
+       "      <th>high_risk_infection_percent</th>\n",
+       "      <th>wnv_probablitiy</th>\n",
+       "      <th>cost_to_spray</th>\n",
+       "      <th>spray_metric</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -819,92 +647,51 @@
        "      <td>41.865503</td>\n",
        "      <td>-87.652436</td>\n",
        "      <td>4</td>\n",
-       "      <td>60.900002</td>\n",
-       "      <td>29.5</td>\n",
-       "      <td>36.099998</td>\n",
        "      <td>78794.0</td>\n",
        "      <td>0.006132</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>18.400002</td>\n",
-       "      <td>19.5</td>\n",
        "      <td>6.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>2007</td>\n",
        "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2007-05-29</td>\n",
-       "      <td>60608</td>\n",
-       "      <td>41.865503</td>\n",
-       "      <td>-87.652436</td>\n",
-       "      <td>4</td>\n",
-       "      <td>60.900002</td>\n",
-       "      <td>29.5</td>\n",
-       "      <td>36.099998</td>\n",
-       "      <td>78794.0</td>\n",
-       "      <td>0.006132</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>18.400002</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2007-05-29</td>\n",
-       "      <td>60608</td>\n",
-       "      <td>41.865503</td>\n",
-       "      <td>-87.652436</td>\n",
-       "      <td>4</td>\n",
-       "      <td>60.900002</td>\n",
-       "      <td>29.5</td>\n",
-       "      <td>36.099998</td>\n",
-       "      <td>78794.0</td>\n",
-       "      <td>0.006132</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>18.400002</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>6.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>22</td>\n",
+       "      <td>168.4</td>\n",
+       "      <td>12.75</td>\n",
+       "      <td>26.100002</td>\n",
+       "      <td>20565.235428</td>\n",
+       "      <td>1.032555</td>\n",
+       "      <td>0.078177</td>\n",
+       "      <td>43.952403</td>\n",
+       "      <td>0.478376</td>\n",
+       "      <td>33280.0</td>\n",
+       "      <td>0.29561</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        date  zip_code   latitude  longitude  num_mosquitos  percent_employed  \\\n",
-       "0 2007-05-29     60608  41.865503 -87.652436              4         60.900002   \n",
-       "1 2007-05-29     60608  41.865503 -87.652436              4         60.900002   \n",
-       "2 2007-05-29     60608  41.865503 -87.652436              4         60.900002   \n",
+       "        date  zip_code   latitude  longitude  num_mosquitos  total_population  \\\n",
+       "0 2007-05-29     60608  41.865503 -87.652436              4           78794.0   \n",
        "\n",
-       "   percent_no_health  percent_public_health  total_population  \\\n",
-       "0               29.5              36.099998           78794.0   \n",
-       "1               29.5              36.099998           78794.0   \n",
-       "2               29.5              36.099998           78794.0   \n",
+       "   population_porportion  land_area  water_area  year  week  averaged_cases  \\\n",
+       "0               0.006132        6.4         0.2  2007    22           168.4   \n",
        "\n",
-       "   population_porportion  percent_age_over_65  percent_age_under_14  \\\n",
-       "0               0.006132                  7.7             18.400002   \n",
-       "1               0.006132                  7.7             18.400002   \n",
-       "2               0.006132                  7.7             18.400002   \n",
+       "   averaged_deaths  at_risk_population_percent  at_risk_population  \\\n",
+       "0            12.75                   26.100002        20565.235428   \n",
        "\n",
-       "   percent_low_income  land_area  water_area  year  week  \n",
-       "0                19.5        6.4         0.2  2007    22  \n",
-       "1                19.5        6.4         0.2  2007    22  \n",
-       "2                19.5        6.4         0.2  2007    22  "
+       "   proportional_averaged_cases  proportional_averaged_deaths  \\\n",
+       "0                     1.032555                      0.078177   \n",
+       "\n",
+       "   high_risk_infection_percent  wnv_probablitiy  cost_to_spray  spray_metric  \n",
+       "0                    43.952403         0.478376        33280.0       0.29561  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(3)"
+    "df.head(1)"
    ]
   },
   {
@@ -1378,13 +1165,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [],
@@ -1448,7 +1228,7 @@
     }
    ],
    "source": [
-    "# Agressive Spraying\n",
+    "# Agressive spraying total cost\n",
     "df_work[df_work['spray_metric'] > 0.48]['cost_to_spray'].sum()"
    ]
   },
@@ -1498,7 +1278,7 @@
     }
    ],
    "source": [
-    "# Moderate Spraying\n",
+    "# Moderate spraying total cost\n",
     "df_work[df_work['spray_metric'] > 0.5]['cost_to_spray'].sum()"
    ]
   },
@@ -1548,7 +1328,7 @@
     }
    ],
    "source": [
-    "# Conservative Spraying\n",
+    "# Conservative spraying total cost\n",
     "df_work[df_work['spray_metric'] > 0.52]['cost_to_spray'].sum()"
    ]
   },
